force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <description>The need is to capture underwriting data at the client level. Data is specific to Medical and Rx membership, revenue, and margin. Data will be received from underwriting ‘A File’ which is updated weekly. This object be a new section under Companies.</description>
    <label>Financial</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>