force-app/main/default/objects/Financial__c/fields/Deal_years__c.field-meta.xml
<CustomField>
    <fullName>Deal_years__c</fullName>
    <label>Deal years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>