force-app/main/default/objects/Financial__c/fields/Financial_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Type__c</fullName>
    <label>Financial Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Surest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>