force-app/main/default/objects/Financial__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ASO &amp; FI</fullName>
            </value>
            <value>
                <fullName>FFS</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>