force-app/main/default/objects/Financial__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated</label>
    <required>true</required>
    <type>Date</type>
</CustomField>