force-app/main/default/objects/Financial__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>