force-app/main/default/objects/Financial__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>RX</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
            </value>
            <value>
                <fullName>Hospital Indemnity</fullName>
            </value>
            <value>
                <fullName>Basic Life</fullName>
            </value>
            <value>
                <fullName>Supplemental Life</fullName>
            </value>
            <value>
                <fullName>Dependent Life</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>FMLA</fullName>
            </value>
            <value>
                <fullName>FIGO</fullName>
            </value>
            <value>
                <fullName>Flexwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>