force-app/main/default/objects/Financial__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>