force-app/main/default/objects/Financial__c/fields/Revenue_Total_UHG__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total_UHG__c</fullName>
    <label>Revenue Total UHG</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>