force-app/main/default/objects/Financial__c/fields/Revenue_URS__c.field-meta.xml
<CustomField>
    <fullName>Revenue_URS__c</fullName>
    <label>Revenue URS</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>