force-app/main/default/objects/Financial__c/fields/Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Subscribers__c</fullName>
    <label>Subscribers</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>