force-app/main/default/objects/Financial__c/fields/TotExp__c.field-meta.xml
<CustomField>
    <fullName>TotExp__c</fullName>
    <label>TotRevRx</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>