force-app/main/default/objects/Financial__c/fields/TotExpRx__c.field-meta.xml
<CustomField>
    <fullName>TotExpRx__c</fullName>
    <label>TotExpRx</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>