force-app/main/default/objects/Financial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Membership_Type__c</columns>
    <columns>Membership__c</columns>
    <columns>Revenue__c</columns>
    <columns>Margin__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Type__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <label>All</label>
</ListView>