force-app/main/default/objects/Financial__c/listViews/Specialty_Financials.listView-meta.xml
<ListView>
    <fullName>Specialty_Financials</fullName>
    <columns>Membership_Type__c</columns>
    <columns>Company__c</columns>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Revenue__c</columns>
    <columns>Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Last_Updated__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Type__c</field>
        <operation>equals</operation>
        <value>Dental,Vision,Accident,Critical Illness,Hospital Indemnity,Basic Life,Supplemental Life,Dependent Life,STD,LTD,FIGO</value>
    </filters>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>&quot;Quanta Services, Inc.&quot;</value>
    </filters>
    <label>Specialty Financials</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>